--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,11 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes: ['bootstrap_5_layout.html.twig']
 
+
 when@test:
     twig:
         strict_variables: true
+
+when@prod:
+    twig:
+        auto_reload : true        
