--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,7 @@ parameters:
      packages_directory: '%kernel.project_dir%/src/Ressource/package'
      class_directory: '%kernel.project_dir%/src/Class'
      softwares_directory: '%kernel.project_dir%/public/Ressource/package'
+     archives_directory: '%kernel.project_dir%/public/Ressource/archive/package'
     # statistics_directory: '%kernel.project_dir%/public/uploads/statistics'
     # uploads_directory: '%kernel.project_dir%/src/Ressource/'
 services:
