--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -41,14 +41,18 @@ when@prod:
     monolog:
         handlers:
             main:
-                type: fingers_crossed
+                #type: fingers_crossed
+                type: rotating_file
                 action_level: error
                 handler: nested
-                excluded_http_codes: [404, 405]
+                #excluded_http_codes: [404, 405]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+                max_files: 10
+                channels: [app]
             nested:
                 type: stream
                 path: php://stderr
+                #path: var/log/prod.log
                 level: debug
                 formatter: monolog.formatter.json
             console:
