--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "easycorp/easyadmin-bundle": "^4.0",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "phpoffice/phpspreadsheet": "^1.22",
         "psr/log": "^3.0",
         "sensio/framework-extra-bundle": "^6.2",
@@ -19,13 +20,14 @@
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.0.*",
         "symfony/config": "6.0.*",
-        "symfony/console": "^6.1",
+        "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/finder": "6.0.*",
         "symfony/flex": "1.19.2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/google-mailer": "6.0.*",
+        "symfony/http-foundation": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/process": "6.0.*",
@@ -35,8 +37,10 @@
         "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "*",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
