--- a/.env.dev
+++ b/.env.dev
@@ -18,6 +18,8 @@ APP_ENV=dev
 APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 ###< symfony/framework-bundle ###
 
+### Define DB Info ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
