--- a/.env.prod
+++ b/.env.prod
@@ -28,7 +28,7 @@ APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://${ADMIN}:${PWD}@${HOSTNAME}/${DB}?serverVersion=5.7"
-DATABASE_URL="mysql://root:@localhost/winback?serverVersion=5.7"
+ DATABASE_URL="mysql://${ADMIN}:${PWD}@${HOSTNAME}/${DB}?serverVersion=5.7"
+# DATABASE_URL="mysql://root:@localhost/winback?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
