--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 
 parameters:
-     app.supported_locales: 'en|fr'
+     app.supported_locales: 'en|fr|ko'
      statistics_directory: '%kernel.project_dir%/public/uploads/statistics'
      uploads_directory: '%kernel.project_dir%/public/Ressource/'
      packages_directory: '%kernel.project_dir%/src/Ressource/package'
