--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,7 +3,8 @@ twig:
     form_themes: ['bootstrap_5_layout.html.twig']
     paths:
         '%kernel.project_dir%/vendor/knplabs/knp-paginator-bundle/templates': KnpPaginator
-
+        '%kernel.project_dir%/public/img': images
+        '%kernel.project_dir%/public/css': styles
 
 when@test:
     twig:
