--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,8 @@ parameters:
      archives_directory: '%kernel.project_dir%/public/Ressource/archive/package'
     # statistics_directory: '%kernel.project_dir%/public/uploads/statistics'
     # uploads_directory: '%kernel.project_dir%/src/Ressource/'
+     #ressource_directory: '%env(RESSOURCE_PATH)%'
+     ressource_directory: '%kernel.project_dir%/public/Ressource/'
 services:
     # default configuration for services in *this* file
     _defaults:
