--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,14 @@
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/ux-chartjs": "^2.7",
         "symfony/validator": "6.0.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.0.*",
         "symfonycasts/reset-password-bundle": "*",
         "symfonycasts/verify-email-bundle": "^1.10",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.5",
+        "twig/extra-bundle": "^3.5",
         "twig/intl-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
