essai ressource path

--- a/.env
+++ b/.env
@@ -35,3 +35,11 @@ APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+RESSOURCE_PATH="${CC_FS_BUCKET}/Ressource/"
+#RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
+
+ PACK_PATH="${RESSOURCE_PATH}package/"
+ ARCH_PATH="${RESSOURCE_PATH}archive/"
+ PACK_ARCH_PATH="${ARCH_PATH}package/"
+ UPLOAD_PATH="${ROOT_DIR}/public/uploads/"
