--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ HOSTNAME=HOSTNAME
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 
-RESSOURCE_PATH="${CC_FS_BUCKET}/Ressource/"
+RESSOURCE_PATH="${CC_FS_BUCKET}"
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
  PACK_PATH="${RESSOURCE_PATH}package/"
