--- a/.env
+++ b/.env
@@ -39,8 +39,8 @@ HOSTNAME=HOSTNAME
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-CC_FS_BUCKET=CC_FS_BUCKET
-RESSOURCE_PATH=CC_FS_BUCKET
+#CC_FS_BUCKET=CC_FS_BUCKET
+RESSOURCE_PATH="Ressource/"
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
  PACK_PATH="${RESSOURCE_PATH}package/"
