--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ HOSTNAME=HOSTNAME
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-BUCKET=CC_FS_BUCKET
+#BUCKET=CC_FS_BUCKET
 RESSOURCE_PATH="Ressource/"
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
