--- a/.env
+++ b/.env
@@ -40,7 +40,8 @@ HOSTNAME=HOSTNAME
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 #BUCKET=CC_FS_BUCKET
-RESSOURCE_PATH="Ressource/"
+CC_FS_BUCKET=CC_FS_BUCKET
+RESSOURCE_PATH=RESSOURCE_PATH
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
  PACK_PATH="${RESSOURCE_PATH}package/"
