--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -8,7 +8,8 @@ twig:
     globals:
         #ressource_directory: '%env(RESSOURCE_PATH)%'
         ressource_directory: '%kernel.project_dir%/public/Ressource/'
-        uploads_directory: '%kernel.project_dir%/Ressource/'
+        #uploads_directory: '%kernel.project_dir%/Ressource/'
+        uploads_directory: '%env(RESSOURCE_PATH)%'
 
 when@test:
     twig:
