--- a/.env
+++ b/.env
@@ -41,7 +41,8 @@ HOSTNAME=HOSTNAME
 ###< symfony/google-mailer ###
 #BUCKET=CC_FS_BUCKET
 CC_FS_BUCKET=CC_FS_BUCKET
-RESSOURCE_PATH=RESSOURCE_PATH
+APP_HOME=APP_HOME
+RESSOURCE_PATH="${APP_HOME}/Ressource/"
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
  PACK_PATH="${RESSOURCE_PATH}package/"
