--- a/.env
+++ b/.env
@@ -42,7 +42,7 @@ HOSTNAME=HOSTNAME
 #BUCKET=CC_FS_BUCKET
 CC_FS_BUCKET=CC_FS_BUCKET
 APP_HOME=APP_HOME
-RESSOURCE_PATH="${APP_HOME}/public/Ressource/Ressource/"
+RESSOURCE_PATH="Ressource/Ressource/"
 #RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
  PACK_PATH="${RESSOURCE_PATH}package/"
