--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,13 +10,13 @@ parameters:
      #uploads_directory: '%kernel.project_dir%/public/Ressource/'
      uploads_directory: '%env(RESSOURCE_PATH)%'
      #uploads_directory: '%kernel.project_dir%/Ressource/'
-     packages_directory: '%kernel.project_dir%/src/Ressource/package'
+     #packages_directory: '%kernel.project_dir%/src/Ressource/package'
      class_directory: '%kernel.project_dir%/src/Class'
-     softwares_directory: '%kernel.project_dir%/public/Ressource/package'
-     archives_directory: '%kernel.project_dir%/public/Ressource/archive/package'
+    # softwares_directory: '%kernel.project_dir%/public/Ressource/package'
+    # archives_directory: '%kernel.project_dir%/public/Ressource/archive/package'
     # statistics_directory: '%kernel.project_dir%/public/uploads/statistics'
      #ressource_directory: '%env(RESSOURCE_PATH)%'
-     ressource_directory: '%kernel.project_dir%/public/Ressource/'
+     #ressource_directory: '%kernel.project_dir%/public/Ressource/'
 services:
     # default configuration for services in *this* file
     _defaults:
