--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "Listen for Xdebug",
             "type": "php",
             "request": "launch",
-            "port": 9003,
-            "runtimeExecutable": "/Applications/MAMP/bin/php/php8.0.8/bin/php"
+            "port": 9000,
+            "runtimeExecutable": "C:/wamp64/bin/php/php8.1.7/php.exe"
         },
         {
             "name": "Launch currently open script",
