--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,10 @@ todel.txt
 composer.json
 composer.lock
 symfony.lock
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
