--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=APP_ENV
 APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 ###< symfony/framework-bundle ###
 
@@ -32,6 +32,8 @@ ADMIN=ADMIN
 PWD=PWD
 HOSTNAME=HOSTNAME
 DB_PORT=DB_PORT
+PORT=PORT
+SERVER_SECURE_PORT=SERVER_SECURE_PORT # Port 22, prod server, parallel of main server if 5005 not accessible
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
@@ -41,13 +43,17 @@ DB_PORT=DB_PORT
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-#BUCKET=CC_FS_BUCKET
-CC_FS_BUCKET=CC_FS_BUCKET
-APP_HOME=APP_HOME
-RESSOURCE_PATH="Ressource/Ressource/"
-#RESSOURCE_PATH="${ROOT_DIR}/Ressource/"
 
- PACK_PATH="${RESSOURCE_PATH}package/"
- ARCH_PATH="${RESSOURCE_PATH}archive/"
- PACK_ARCH_PATH="${ARCH_PATH}package/"
- UPLOAD_PATH="${ROOT_DIR}/public/uploads/"
+RESSOURCE_PATH=RESSOURCE_PATH
+
+PACK_PATH=PACK_PATH
+ARCH_PATH=ARCH_PATH
+PACK_ARCH_PATH=PACK_ARCH_PATH
+
+REL_PACK_PATH=REL_PACK_PATH
+REL_PACK_ARCH_PATH=REL_PACK_ARCH_PATH
+
+PUB_PATH=PUB_PATH
+LIB_PATH=LIB_PATH
+PROTO_PATH=PROTO_PATH
+LOG_PATH=LOG_PATH
