--- a/.env.dev
+++ b/.env.dev
@@ -18,22 +18,15 @@ APP_ENV=dev
 APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 ###< symfony/framework-bundle ###
 
-### Define DB Info ###
-
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://db_user:db_password@127.0.0.1/db_name?serverVersion=5.7&charset=utf8mb4"
-# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL=DATABASE_URL
 ###< doctrine/doctrine-bundle ###
 
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-#MAILER_DSN=smtp://user:pass@smtp.example.com:port
-###< symfony/mailer ###
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+RESSOURCE_PATH=RESSOURCE_PATH
