--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,37 @@
-# define your env variables for the test env here
-KERNEL_CLASS='App\Kernel'
-APP_SECRET='$ecretf0rt3st'
-SYMFONY_DEPRECATIONS_HELPER=999999
-PANTHER_APP_ENV=panther
-PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+# In all environments, the following files are loaded if they exist,
+# the latter taking precedence over the former:
+#
+#  * .env                contains default values for the environment variables needed by the app
+#  * .env.local          uncommitted file with local overrides
+#  * .env.$APP_ENV       committed environment-specific defaults
+#  * .env.$APP_ENV.local uncommitted environment-specific overrides
+#
+# Real environment variables win over .env files.
+#
+# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
+#
+# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
+# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+
+###> symfony/framework-bundle ###
+APP_ENV=test
+APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
+###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL=DATABASE_URL
+###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+ MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+RESSOURCE_PATH=RESSOURCE_PATH
+KERNEL_CLASS=KERNEL_CLASS
+APP_SECRET=APP_SECRET
+SYMFONY_DEPRECATIONS_HELPER=SYMFONY_DEPRECATIONS_HELPER
+PANTHER_APP_ENV=PANTHER_APP_ENV
+PANTHER_ERROR_SCREENSHOT_DIR=PANTHER_ERROR_SCREENSHOT_DIR
