--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ SERVER_SECURE_PORT=SERVER_SECURE_PORT # Port 22, prod server, parallel of main s
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-
+ROOT_DIR=ROOT_DIR
 RESSOURCE_PATH=RESSOURCE_PATH
 
 PACK_PATH=PACK_PATH
