--- a/.env.dev
+++ b/.env.dev
@@ -30,3 +30,4 @@ DATABASE_URL=DATABASE_URL
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 RESSOURCE_PATH=RESSOURCE_PATH
+ROOT_DIR=ROOT_DIR
