--- a/.env.test
+++ b/.env.test
@@ -29,6 +29,7 @@ DATABASE_URL=DATABASE_URL
 # Gmail SHOULD NOT be used on production, use it in development only.
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+ROOT_DIR=ROOT_DIR
 RESSOURCE_PATH=RESSOURCE_PATH
 KERNEL_CLASS=KERNEL_CLASS
 APP_SECRET=APP_SECRET
