--- a/.env.prod
+++ b/.env.prod
@@ -30,3 +30,4 @@ DATABASE_URL=DATABASE_URL
  MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 RESSOURCE_PATH=RESSOURCE_PATH
+ROOT_DIR=ROOT_DIR
