--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "blackfire/php-sdk": "^2.3",
         "cboden/ratchet": "^0.4.4",
         "connectholland/cookie-consent-bundle": "^0.11.0",
         "doctrine/doctrine-bundle": "^2.5",
@@ -103,6 +104,7 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
+        "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.43",
         "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "6.0.*",
