new authentication db

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 DATABASE_URL=DATABASE_URL
+CUSTOMER_DATABASE_URL=CUSTOMER_DATABASE_URL
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/google-mailer ###
