--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 ###> doctrine/doctrine-bundle ###
 #
 DATABASE_URL=DATABASE_URL
+CUSTOMER_DATABASE_URL=CUSTOMER_DATABASE_URL
 ###< doctrine/doctrine-bundle ###
 DB=DB
 ADMIN=ADMIN
