--- a/.env.dev
+++ b/.env.dev
@@ -23,6 +23,7 @@ APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 DATABASE_URL=DATABASE_URL
+CUSTOMER_DATABASE_URL=CUSTOMER_DATABASE_URL
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/google-mailer ###
