--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,23 +1,46 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        # url: '%env(resolve:DATABASE_URL)%'
+        connections:
+            default:
+                url: '%env(resolve:DATABASE_URL)%'
+            customer:
+                url: '%env(resolve:CUSTOMER_DATABASE_URL)%'
+        default_connection: default
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
     orm:
-        auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
-        mappings:
-            App:
-                is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
-        dql:
-            string_functions:
-                MATCH_AGAINST: App\Extensions\Doctrine\MatchAgainst
+        default_entity_manager: default
+        entity_managers:
+            default:
+                connection: default
+                mappings:
+                    Main:
+                        is_bundle: false
+                        dir: '%kernel.project_dir%/src/Entity/Main'
+                        prefix: 'App\Entity\Main'
+                        alias: Main
+            customer:
+                connection: customer
+                mappings:
+                    Customer:
+                        is_bundle: false
+                        dir: '%kernel.project_dir%/src/Entity/Customer'
+                        prefix: 'App\Entity\Customer'
+                        alias: Customer
+        #auto_generate_proxy_classes: true
+        #naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        #auto_mapping: true
+        #mappings:
+            #App:
+                #is_bundle: false
+                #dir: '%kernel.project_dir%/src/Entity'
+                #prefix: 'App\Entity'
+                #alias: App
+        #dql:
+            #string_functions:
+                #MATCH_AGAINST: App\Extensions\Doctrine\MatchAgainst
                 
 when@test:
     doctrine:
