--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,15 +3,16 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        App\Entity\User:
+        App\Entity\Main\User:
              algorithm: auto
-        App\Entity\Admin:
+        App\Entity\Main\Admin:
             algorithm: auto
-        App\Entity\Client:
+        App\Entity\Main\Client:
             algorithm: auto
 
     role_hierarchy:
         ROLE_CLIENT:      [ROLE_USER]
+        ROLE_CHRIS:       [ROLE_USER]
         ROLE_READER:      [ROLE_USER]
         ROLE_GOE:         [ROLE_READER]
         ROLE_SAV:         [ROLE_USER, ROLE_GOE]
@@ -24,7 +25,7 @@ security:
         app_user_provider:
             entity:
                 #class: App\Entity\Admin
-                class: App\Entity\User
+                class: App\Entity\Main\User
                 property: email
         #app_client_provider:
             #entity:
