--- a/composer.json
+++ b/composer.json
@@ -14,33 +14,35 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "easycorp/easyadmin-bundle": "^4.0",
+        "hwi/oauth-bundle": "^2.0",
         "knplabs/knp-paginator-bundle": "^5.9",
+        "knpuniversity/oauth2-client-bundle": "^2.16",
         "phpoffice/phpspreadsheet": "^1.22",
         "psr/log": "^3.0",
-        "sensio/framework-extra-bundle": "^6.2",
+        "stevenmaguire/oauth2-keycloak": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "6.0.*",
-        "symfony/config": "6.0.*",
-        "symfony/console": "6.0.*",
-        "symfony/dotenv": "6.0.*",
-        "symfony/finder": "6.0.*",
+        "symfony/asset": "6.3.*",
+        "symfony/config": "6.3.*",
+        "symfony/console": "6.3.*",
+        "symfony/dotenv": "6.3.*",
+        "symfony/finder": "6.3.*",
         "symfony/flex": "1.19.2",
-        "symfony/form": "6.0.*",
-        "symfony/framework-bundle": "6.0.*",
-        "symfony/google-mailer": "6.0.*",
-        "symfony/http-foundation": "6.0.*",
-        "symfony/mailer": "6.0.*",
+        "symfony/form": "6.3.*",
+        "symfony/framework-bundle": "6.3.*",
+        "symfony/google-mailer": "6.3.*",
+        "symfony/http-foundation": "6.3.*",
+        "symfony/mailer": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/process": "6.0.*",
-        "symfony/proxy-manager-bridge": "6.0.*",
-        "symfony/runtime": "6.0.*",
-        "symfony/security-bundle": "6.0.*",
-        "symfony/twig-bundle": "6.0.*",
+        "symfony/process": "6.3.*",
+        "symfony/proxy-manager-bridge": "6.3.*",
+        "symfony/runtime": "6.3.*",
+        "symfony/security-bundle": "6.3.*",
+        "symfony/twig-bundle": "6.3.*",
         "symfony/ux-chartjs": "^2.12",
-        "symfony/validator": "6.0.*",
+        "symfony/validator": "6.3.*",
         "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "6.0.*",
+        "symfony/yaml": "6.3.*",
         "symfonycasts/reset-password-bundle": "*",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/cssinliner-extra": "^3.5",
@@ -97,18 +99,18 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.0.*"
+            "require": "6.3.*"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.0.*",
-        "symfony/css-selector": "6.0.*",
-        "symfony/debug-bundle": "6.0.*",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
+        "symfony/debug-bundle": "6.3.*",
         "symfony/maker-bundle": "^1.43",
-        "symfony/phpunit-bridge": "^6.0",
-        "symfony/stopwatch": "6.0.*",
-        "symfony/var-dumper": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*"
+        "symfony/phpunit-bridge": "^6.3",
+        "symfony/stopwatch": "6.3.*",
+        "symfony/var-dumper": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     }
 }
