--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -14,7 +14,7 @@ when@dev:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
+                #channels: ["!event", "!doctrine", "!console"]
             doctrine:
                 type: rotating_file
                 path: var/log/dev/doctrine/.log
@@ -80,7 +80,8 @@ when@prod:
                 type: fingers_crossed
                 action_level: error
                 handler: error_log_handler
-                excluded_404s:
+                #excluded_404s:
+                excluded_http_codes:
                     # regex: exclude all 404 errors from the logs
                     - ^/
             error_log_handler:
@@ -106,7 +107,7 @@ when@prod:
             symfony_mailer:
                 type:       symfony_mailer
                 from_email: 'error@example.com'
-                to_email:   ['leadieudonat@gmail.com', 'ldieudonat@winback.com', 'bwollensack@winback.com']
+                to_email:   ['leadieudonat@gmail.com', 'ldieudonat@winback.com', 'bwollensack@winback.com', klhote@winback.com]
                 subject:    'An Error Occurred! %%message%%'
                 level:      critical
                 channels: ["console"]
