--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ APP_SECRET=795e68e6ecd6f1ed72667d456cc60b05
 #
 DATABASE_URL=DATABASE_URL
 CUSTOMER_DATABASE_URL=CUSTOMER_DATABASE_URL
+KEYCLOAK_SECRET=KEYCLOAK_SECRET
+KEYCLOAK_CLIENTID=KEYCLOAK_CLIENTID
+KEYCLOAK_APP_URL=KEYCLOAK_APP_URL
 ###< doctrine/doctrine-bundle ###
 DB=DB
 ADMIN=ADMIN
