--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,3 +13,16 @@ class:
 server:
     resource: ../src/Server/
     type: annotation
+
+error_404:
+    path: /error_404
+    controller:    Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template:    mail/error_404.html.twig
+
+protocol:
+    path: /user/protocol
+    controller:    Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template:    protocol.html.twig
+
