--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -7,7 +7,7 @@ when@dev:
         handlers:
             main:
                 type: rotating_file
-                path: var/log/dev/.log
+                #path: var/log/dev/.log
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
                 max_files: 10
                 channels: ["!event", "!doctrine"]
