--- a/.env
+++ b/.env
@@ -37,3 +37,9 @@ PUB_PATH=PUB_PATH
 LIB_PATH=LIB_PATH
 PROTO_PATH=PROTO_PATH
 LOG_PATH=LOG_PATH
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
