--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,12 @@
         "symfony/google-mailer": "6.3.*",
         "symfony/http-foundation": "6.3.*",
         "symfony/mailer": "6.3.*",
+        "symfony/messenger": "6.3.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/process": "6.3.*",
         "symfony/proxy-manager-bridge": "6.3.*",
         "symfony/runtime": "6.3.*",
+        "symfony/scheduler": "6.3.*",
         "symfony/security-bundle": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/ux-chartjs": "^2.12",
