--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@symfony/stimulus-bundle": "file:vendor/symfony/stimulus-bundle/assets",
         "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
         "@symfony/webpack-encore": "^4.0.0",
-        "chart.js": "^3.4.1 <3.9",
+        "chart.js": "^3.4.1 <3.9 || ^4.0",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
         "webpack": "^5.74.0",
