--- a/.env
+++ b/.env
@@ -11,12 +11,17 @@ KEYCLOAK_SECRET=KEYCLOAK_SECRET
 KEYCLOAK_CLIENTID=KEYCLOAK_CLIENTID
 KEYCLOAK_APP_URL=KEYCLOAK_APP_URL
 ###< doctrine/doctrine-bundle ###
-DB=DB
-ADMIN=ADMIN
-PWD=PWD
-HOSTNAME=HOSTNAME
+DB_NAME=DB_NAME
+DB_ADMIN=DB_ADMIN
+DB_PWD=DB_PWD
+DB_HOSTNAME=DB_HOSTNAME
 DB_PORT=DB_PORT
-PORT=PORT
+# DB=DB
+# ADMIN=ADMIN
+# PWD=PWD
+# HOSTNAME=HOSTNAME
+# DB_PORT=DB_PORT
+# PORT=PORT
 SERVER_SECURE_PORT=SERVER_SECURE_PORT # Port 22, prod server, parallel of main server if 5005 not accessible
 
 ###> symfony/google-mailer ###
