--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -8,3 +8,4 @@ knpu_oauth2_client:
             client_id: '%env(KEYCLOAK_CLIENTID)%'
             client_secret: '%env(KEYCLOAK_SECRET)%'
             redirect_route: 'oauth_check'
+            version: '23.0.6'
