--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DB_PORT=DB_PORT
 SERVER_SECURE_PORT=SERVER_SECURE_PORT # Port 22, prod server, parallel of main server if 5005 not accessible
 
 ###> symfony/google-mailer ###
- MAILER_DSN=gmail://USERNAME:PASSWORD@default
+ MAILER_DSN=MAILER_DSN
 ###< symfony/google-mailer ###
 
 ROOT_DIR=ROOT_DIR
