--- a/.env.dev
+++ b/.env.dev
@@ -28,7 +28,7 @@ CUSTOMER_DATABASE_URL=CUSTOMER_DATABASE_URL
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail://USERNAME:PASSWORD@default
+ MAILER_DSN=MAILER_DSN
 ###< symfony/google-mailer ###
 RESSOURCE_PATH=RESSOURCE_PATH
 ROOT_DIR=ROOT_DIR
