--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -4,14 +4,17 @@ doctrine:
         connections:
             default:
                 url: '%env(resolve:DATABASE_URL)%'
+                driver: 'pdo_mysql'
             customer:
-                url: '%env(resolve:CUSTOMER_DATABASE_URL)%'
+                url: '%env(resolve:DATABASE_URL)%'
+                driver: 'pdo_mysql'
         default_connection: default
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
     orm:
-        default_entity_manager: default
+        default_entity_manager: customer
+        #default_entity_manager: default
         entity_managers:
             default:
                 connection: default
